--- a/flex/flex.html
+++ b/flex/flex.html
@@ -8,6 +8,16 @@
     <link rel="stylesheet" href="flex.css" />
   </head>
   <body>
-    <!-- 아래에 container와 item들을 만들어주세요 -->
+    <div class = "container">
+      <div class ="item">
+        flex item 1
+      </div>
+      <div class ="item">
+        flex item 2
+      </div>
+      <div class ="item">
+        flex item 3
+      </div>
+    </div>
   </body>
 </html>
