--- a/grid/grid.html
+++ b/grid/grid.html
@@ -9,5 +9,19 @@
   </head>
   <body>
     <!-- 아래에 container와 item들을 만들어주세요 -->
+    <div class = "container">
+      <div class ="item">
+        grid item 1
+      </div>
+      <div class ="item">
+        grid item 2
+      </div>
+      <div class ="item">
+        grid item 3
+      </div>
+      <div class ="item">
+        grid item 4
+      </div>
+    </div>
   </body>
 </html>
